basic grayscale filter

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
-    <h1> Mouse over to move flashlight </h1>
+    <h1> Mouse over to filter </h1>
     <canvas id="wall" width=700 height=300></canvas>
     <script src="js/vendor.js"></script>
     <script src="js/main.build.js"></script>
