--- a/static/index.html
+++ b/static/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
-    <h1> Mouse over to filter </h1>
-    <canvas id="wall" width=700 height=300></canvas>
+    <h1> Mouse over Output Canvas to filter </h1>
     <script src="js/vendor.js"></script>
     <script src="js/main.build.js"></script>
   </body>
