--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
-    <h1> Mouse over Output Canvas to filter </h1>
+    <h1>Flashlight Effect</h1>
+    <h2> Mouse over Output Canvas to filter </h2>
     <script src="js/vendor.js"></script>
     <script src="js/main.build.js"></script>
   </body>
