--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <h1>Flashlight Effect</h1>
-    <h2> Mouse over Output Canvas to filter </h2>
+    <h2> Mouse over Output Canvas to filter</h2>
+    <h2> Mouse over towards left/right edges to pan</h2>
     <script src="js/vendor.js"></script>
     <script src="js/main.build.js"></script>
   </body>
