update demo text

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
-    <h1>Flashlight Effect</h1>
+    <h1>Spotlight Effect</h1>
     <h2> Mouse over Output Canvas to filter</h2>
     <h2> Mouse over towards left/right edges to pan</h2>
     <script src="js/vendor.js"></script>
